@@ -10,7 +10,9 @@ Bugfixes:
 - serialization of Maps with non-number keys fixed (Jira APPSERVER-60)
 - multiple IO processor threads are used by default
 - memory leak when closing RTMPT connections fixed (Jira APPSERVER-61)
-- merged WAR build script with primary script, also moved WAR specific startup servlet into trunk
+- merged WAR build script with primary script, also moved WAR specific
+  startup servlet into trunk
+- deserializing of remoting results fixed (Jira APPSERVER-63)
 
 
 Red5 0.6rc2 (2007-02-12)
